--- a/TiendaTutorplus/src/main/resources/static/css/styles.css
+++ b/TiendaTutorplus/src/main/resources/static/css/styles.css
@@ -38,3 +38,53 @@ h1, h2 {
     background-color: #003366;
 }
 
+/*estilos de la clase testimonio*/
+.testimonio {
+    background-color: #f8f9fa;
+    border-left: 5px solid #0d6efd;
+    padding: 1rem 1.5rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    transition: transform 0.3s ease;
+}
+
+.testimonio:hover {
+    transform: scale(1.02);
+}
+
+.testimonio h5 {
+    margin-bottom: 0.5rem;
+    color: #0d6efd;
+    font-weight: bold;
+}
+
+.testimonio p {
+    font-style: italic;
+    color: #333;
+}
+
+/*estilos para registro*/
+
+
+/*estilos para contacto*/
+.contacto-section {
+    background-color: #f8f9fa;
+    padding: 3rem 2rem;
+    border-radius: 12px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.05);
+    margin-bottom: 2rem;
+}
+
+.contacto-info .dato {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 500;
+    color: #555;
+}
+
+.contacto-info .dato i {
+    color: #0d6efd;
+    font-size: 1.3rem;
+}
+
