--- a/TiendaTutorplus/src/main/resources/templates/plantilla.html
+++ b/TiendaTutorplus/src/main/resources/templates/plantilla.html
@@ -34,7 +34,8 @@
                             <li class="nav-item"><a class="btn btn-light rounded-pill px-3" href="#">Materias Disponibles</a></li>
                             <li class="nav-item"><a class="btn btn-light rounded-pill px-3" href="#">Planes y Costos</a></li>
                             <li class="nav-item"><a class="btn btn-light rounded-pill px-3" href="/contacto">Contáctanos</a></li>
-                            <li class="nav-item"><a class="btn btn-light rounded-pill px-3" href="#">Ayuda</a></li>
+                            <li class="nav-item"><a class="btn btn-light rounded-pill px-3" th:href="@{/ayuda}">Ayuda</a></li>
+
                         </ul>
                         <div class="d-flex gap-2">
                             <a href="#" class="btn btn-outline-dark rounded-pill px-3">INGRESAR</a>
@@ -49,6 +50,7 @@
             © 2025 TutorPlus. Todos los derechos reservados.
         </footer>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     </body>
 </html>
