--- a/TiendaTutorplus/src/main/resources/templates/plantilla.html
+++ b/TiendaTutorplus/src/main/resources/templates/plantilla.html
@@ -37,7 +37,7 @@
                             <li class="nav-item"><a class="btn btn-light rounded-pill px-3" href="#">Ayuda</a></li>
                         </ul>
                         <div class="d-flex gap-2">
-                            <a href="#" class="btn btn-outline-dark rounded-pill px-3">INGRESAR</a>
+                            <a href="ingresar" class="btn btn-outline-dark rounded-pill px-3">INGRESAR</a>
                             <a href="registro" class="btn btn-dark rounded-pill px-3">REGISTRAR</a>
                         </div>
                     </div>
