--- a/TiendaTutorplus/src/main/resources/templates/plantilla.html
+++ b/TiendaTutorplus/src/main/resources/templates/plantilla.html
@@ -28,7 +28,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarTutorPlus">
                 <ul class="navbar-nav mx-auto gap-2">
-                    <li class="nav-item"><a class="btn btn-light rounded-pill px-3" th:href="@{/}">Inicio</a></li>
+                    <!-- BOTÓN INICIO ELIMINADO -->
                     <li class="nav-item"><a class="btn btn-light rounded-pill px-3" th:href="@{/buscar-tutor}">Buscar tutor</a></li>
                     <li class="nav-item"><a class="btn btn-light rounded-pill px-3" th:href="@{/tutores-destacados}">Tutores Destacados</a></li>
                     <li class="nav-item"><a class="btn btn-light rounded-pill px-3" th:href="@{/materias}">Materias Disponibles</a></li>
