--- a/TiendaTutorplus/src/main/resources/templates/destacados.html
+++ b/TiendaTutorplus/src/main/resources/templates/destacados.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      th:replace="plantilla :: head">
-
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
+    <meta charset="UTF-8">
     <title>Tutores Destacados</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
 <div th:replace="plantilla :: header"></div>
 
 <div class="container text-center my-5">
-    <img th:src="@{/imagenes/logo.png}" alt="Logo Tutor+" style="height: 80px;">
     <h1 class="mt-4 text-primary">Tutores Destacados</h1>
 
     <div class="row mt-5 justify-content-center">
-        <div class="col-md-4">
-            <img th:src="@{/imagenes/TUTOR1.jpg}" class="img-fluid rounded shadow-sm" alt="Tutor 1">
-        </div>
-        <div class="col-md-4">
-            <img th:src="@{/imagenes/TUTOR2.jpg}" class="img-fluid rounded shadow-sm" alt="Tutor 2">
-        </div>
-        <div class="col-md-4">
-            <img th:src="@{/imagenes/TUTOR3.jpg}" class="img-fluid rounded shadow-sm" alt="Tutor 3">
+        <div class="col-md-3 mb-4" th:each="tutor : ${tutores}">
+            <div class="card shadow-sm">
+                <img th:src="@{/imagenes/__${tutor.foto}__}" class="card-img-top" alt="Foto del tutor">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${tutor.nombre}">Nombre</h5>
+                    <p class="card-text" th:text="'Calificación: ' + ${tutor.calificacion} + ' / 5'">Calificación</p>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="mt-5 px-3 py-3 bg-light rounded border border-primary">
-        <p class="lead">
-            “¡Superá tus límites con Tutor+! Accedé a tutores expertos, clases personalizadas y una experiencia diseñada para que aprendas más, mejor y a tu ritmo. Donde otros ven dificultades, nosotros vemos oportunidades.”
-        </p>
-    </div>
-</div>
-
-<div th:replace="plantilla :: footer"></div>
-</body>
-</html>
+    <div class="mt-5 px-3 py-3
