--- a/TiendaTutorplus/src/main/resources/templates/plantilla.html
+++ b/TiendaTutorplus/src/main/resources/templates/plantilla.html
@@ -44,6 +44,8 @@
         </div>
     </nav>
 </header>
+  <div th:insert="planes :: planesSection"></div>
+  
 
 <footer th:fragment="footer" class="bg-dark text-white text-center py-3">
     © 2025 TutorPlus. Todos los derechos reservados.
