--- a/TiendaTutorplus/src/main/resources/static/css/styles.css
+++ b/TiendaTutorplus/src/main/resources/static/css/styles.css
@@ -92,4 +92,21 @@ h1, h2 {
     color: #0d6efd;
     font-size: 1.3rem;
 }
+/* Planes */
+#planes {
+  background-color: #f8f9fa;
+  padding: 3rem 0;
+}
+#planes .card {
+  border: none;
+  border-radius: 1rem;
+  min-height: 450px;
+}
+#planes .card-header {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+#planes .btn {
+  width: 100%;
+}
 
