--- a/TiendaTutorplus/src/main/resources/templates/ayuda.html
+++ b/TiendaTutorplus/src/main/resources/templates/ayuda.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="plantilla :: head"></head>
 <body>
+
 <header th:replace="plantilla :: header"></header>
 
 <div class="container mt-5">
@@ -65,5 +66,8 @@
 </div>
 
 <footer th:replace="plantilla :: footer"></footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
