--- a/TiendaTutorplus/src/main/resources/static/css/styles.css
+++ b/TiendaTutorplus/src/main/resources/static/css/styles.css
@@ -38,6 +38,10 @@ h1, h2 {
     background-color: #003366;
 }
 
+.navbar .nav-link { white-space: nowrap; }
+.lh-1 { line-height: 1; }
+
+
 /*estilos de la clase testimonio*/
 .testimonio {
     background-color: #f8f9fa;
@@ -218,3 +222,9 @@ h1, h2 {
     }
 }
 
+.contacto-section {
+    background-color: #87CEEB;
+    padding: 3rem 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
