--- a/TiendaTutorplus/src/main/resources/templates/ingresar.html
+++ b/TiendaTutorplus/src/main/resources/templates/ingresar.html
@@ -7,10 +7,10 @@
         <main class="container my-5">
             <h2 class="text-center mb-4">Inicio de Sesión</h2>
 
-            
+
             <div class="bg-primary bg-opacity-10 p-5 rounded shadow" style="max-width: 500px; margin: auto;">
 
-                <form th:action="@{/ingresar}" method="post">
+                <form th:action="@{/login}" method="post" class="w-50 mx-auto" style="max-width:500px;">
                     <div class="mb-3">
                         <label for="correo" class="form-label">Correo:</label>
                         <input type="email" id="correo" name="correo" class="form-control" required>
@@ -21,19 +21,16 @@
                         <input type="password" id="contrasena" name="contrasena" class="form-control" required>
                     </div>
 
-                    <div class="mb-3">
-                        <label for="tipo" class="form-label">Tipo de usuario:</label>
-                        <select id="tipo" name="tipo" class="form-select" required>
-                            <option value="">Seleccione</option>
-                            <option value="profesor">Profesor</option>
-                            <option value="estudiante">Estudiante</option>
-                        </select>
+                    <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+
+                    <div class="mt-3" th:if="${param.error}">
+                        <span class="text-danger">Datos ingresados inválidos.</span>
                     </div>
-                    
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-dark px-4">Ingresar</button>
+                    <div class="mt-1" th:if="${param.logout}">
+                        <span class="text-success">Sesión cerrada correctamente.</span>
                     </div>
                 </form>
+
 
                 <div class="text-center mt-3">
                     <p th:text="${mensaje}" class="text-danger fw-bold"></p>
